WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236572
[LFC][IFC] Fix fast/inline/hidpi-outline-auto-with-border-radius-vertical-rtl.html
https://bugs.webkit.org/show_bug.cgi?id=236572
Summary
[LFC][IFC] Fix fast/inline/hidpi-outline-auto-with-border-radius-vertical-rtl...
alan
Reported
2022-02-13 14:42:31 PST
ssia
Attachments
Patch
(7.77 KB, patch)
2022-02-13 14:48 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-02-13 14:48:55 PST
Created
attachment 451845
[details]
Patch
EWS
Comment 2
2022-02-14 06:43:35 PST
Committed
r289735
(
247220@main
): <
https://commits.webkit.org/247220@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451845
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-02-14 06:44:16 PST
<
rdar://problem/88901720
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug