[LFC][IFC] Fix fast/inline/hidpi-outline-auto-with-border-radius-vertical-rtl.html https://bugs.webkit.org/show_bug.cgi?id=236572

Reviewed by Antti Koivisto.

adjustVisualGeometryForDisplayBox needs the line's logical top (which is turned into visual inside
at (lineBoxLogicalTop + logicalRect.top())).

* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::adjustVisualGeometryForDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):
* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:



Canonical link: https://commits.webkit.org/247220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289735 268f45cc-cd09-0410-ab3c-d52691b4dbfc